.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Moved "Site Setup" to the personal bar, as it's related to who you are.
  Minimal impact to documentation, since it's still in the same area (top right)
  [limi]

- Adjust to CMF's splitting of CMFCatalogAware into separate CatalogAware,
  WorkflowAware, and OpaqueItemManager mixins.
  [davisagli]

- Added zope.app.locales dependency, some strings are in zope domain such as
  'Invalid value' and '(no value)' found in portlet EditForm.
  [vincentfretin]

- Moved membershipRolemapping.dtml and portrait_fix.dtml to PlonePAS.
  [davisagli]

- Added icon_expr property to the Plone control panel tool actions, and
  switched to registering configlet icons here instead of in the action
  icons tool.
  [davisagli]

- Moved the diff tool registration to this package, so it can still be a tool
  for Plone 4.
  [davisagli]

- Use the new zope.ramcache in favor of zope.app.cache.
  [hannosch]

- Removed GroupUserFolder skin layers.
  [davisagli]

- Silenced the deprecation warning about old-style actions from CMFCore's
  ActionProviderBase when listing configlets with the control panel tool.
  [davisagli]

- Added the _IMREALLYPLONE4 hint to factory.py for PloneTestCase to use.
  [hannosch]

- Removed the calendar and review portlets from the standard global
  assignments. The review list is better put onto a personal dashboard and the
  calendar is exceptionally slow and rather user unfriendly. The news and
  events portlets are a better fit to show-case the portlets system.
  [hannosch]

- Include the `overrides.zcml` from `Products.PlacelessTranslationService` to
  actually make PTS' language negotiator available to the zope.i18n machinery.
  [hannosch]

- Got rid of the ToolNames indirection and declared the meta_types directly